# CPUMinerRandomX

./: .env  .gitignore  CMakeLists.txt  README.md  config.json  install.sh  plugins.sh  requirements.txt
docs/exceptions/: readme.md
docs/hashes/: readme.md
docs/pools/: readme.md
docs/requests/: readme.md  stratum.md
docs/utilities/: readme.md
notes/GerrFrog/: links.md  monero_mining.md  pools_addresses.md  server_reply.json  stratum.md
notes/Redhook/: links.md
src/: main.cpp  main.hpp
src/exceptions/inc/: exceptions.hpp
src/hashes/inc/: hashes.hpp
src/hashes/src/: hashes.cpp
src/pools/inc/: pools.hpp  test.hpp
src/pools/src/: pools.cpp  test.cpp
src/requests/inc/: requests.hpp
src/requests/src/: requests.cpp
src/solvers/inc/: solvers.hpp
src/solvers/src/: solvers.cpp
src/utilities/inc/: utilities.hpp
src/utilities/src/: utilities.cpp
